Closed Bug 107212 Opened 23 years ago Closed 23 years ago

FizzillaMach won't quit [Mach]

Categories

(Core :: XUL, defect)

PowerPC
macOS
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: hsivonen, Assigned: dbaron)

Details

Attachments

(1 file)

Build ID: CVS build, pulled on 2001-10-27 after the Mach-O changes landed on the
trunk

Reproducible: Always

Steps to reproduce:
1) Build & lauch FizzillaMach
2) Select Quit from the Mozilla menu.

Actual results:
The app does not quit.

Expected results:
Expected the app to quit.
don't think i've access to this type of build [correct me if i'm wrong, tho'].
nor do i have a build system setup for mac os x. :(

zach, feel free to punt qa ownership as needed...
Keywords: qawanted
QA Contact: sairuh → zach
->pink to triage.
Assignee: pchen → pinkerton
mine.
Status: NEW → ASSIGNED
Component: XP Apps → XP Toolkit/Widgets: Menus
I am seeing this, so I'll take qa
Removing qawanted--this bug doesn't need it as per the definition of the keyword.
Keywords: qawanted
The latest patch on bug 109165, plus a patch that I'm about to attach here,
fixes this bug.  The nsMenuBarX dispatching of commands for the Preferences/Quit
items was not handling the command attribute like the nsMenuItemX code.  I
refactored the code so they use the same method.  However, there's a slight
inconsistency with return values in error cases -- I made the helper function do
what the nsMenuItemX code did (nsEventStatus_eConsumeNoDefault), but I left
nsMenuBarX::ExecuteCommand returning nsEventStatus_eIgnore.  I'm also slightly
disturbed that nsMenuItemX::DoCommand is returning an nsEventStatus for an
nsresult return type, but I left that alone too.

Comments?  Reviews?  (This won't break FizillaCFM, will it?  It should probably
be tested there...)
Comment on attachment 57497 [details] [diff] [review]
patch fixing nsMenuBarX::ExecuteCommand to check command attribute

looks good to me, r=pink
Attachment #57497 - Flags: review+
Attachment #57497 - Flags: superreview+
Comment on attachment 57497 [details] [diff] [review]
patch fixing nsMenuBarX::ExecuteCommand to check command attribute

sr=sfraser
Taking
Assignee: pinkerton → dbaron
Status: ASSIGNED → NEW
Checked in 2001-11-13 17:53 PDT.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Verified that this now works. Thanks.
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: zach → xptoolkit.widgets
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: