FizillaMach: Make the Quit menu item work by checking the command attribute in nsMenuBarX::ExecuteCommand as in nsMenuItemX::DoCommand.  b=107212  r=pinkerton  sr=sfraser